# loki

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  ROADMAP.md
.loki/: README.md
include/: loki.h
include/loki/: core.h  lua.h
include/shared/: context.h
include/shared/audio/: audio.h
include/shared/midi/: midi.h
src/: async_queue.c  async_queue.h  buffers.c  buffers.h  cli.c  cli.h  command.c  command.h  core.c  editor.c  event.c  event.h  host.c  host.h  http.c  http.h  indent.c  indent.h  internal.h  json.c  json.h  jsonrpc.c  jsonrpc.h  lang_bridge.c  lang_bridge.h  lang_config.h  languages.c  languages.h  live_loop.h  loki_markdown.c  loki_syntax.c  lua.c  main.c  modal.c  modal.h  renderer.c  renderer.h  repl.c  repl.h  repl_helpers.c  (+19 more)
src/command/: basic.c  command_impl.h  file.c  goto.c  substitute.c
src/syntax/: lang_alda.h  lang_c.h  lang_csound.h  lang_joy.h  lang_lua.h  lang_markdown.h  lang_python.h  lang_scala.h  lang_scheme.h
tests/: test_http_security.c  test_http_simple.c  test_linenoise_repl.c
tests/loki/: test_async_queue.c  test_buffers.c  test_command.c  test_core.c  test_file_io.c  test_indent.c  test_lang_registration.c  test_lua_api.c  test_modal.c  test_row_operations.c  test_search.c  test_selection.c  test_serialize.c  test_syntax.c  test_terminal.c  test_undo.c
